--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           font-size: 16px; /* Tamaño de fuente */
         }
         .cc{
-          background: linear-gradient(to right, AntiqueWhite, PaleGoldenrod); /* Combina dos colores */
+          background: linear-gradient(to right, rgb(255, 208, 147), rgb(172, 166, 111)); /* Combina dos colores */
         height: 100px; /* Altura del elemento */
         }
         body, html {
@@ -76,7 +76,7 @@
     <div class="body1">
       {% if usuario %}
       <div class="container border-top border-end border-start border-primary"  class="bg-danger">
-        <div class="alert alert-warning">
+        <div class="alert alert" style='background-color: rgb(227, 228, 196);'>
           <div class="container mt-5">
             <div class="row">
               <div class="alert alert-success">
@@ -122,9 +122,9 @@
       La Universidad Nacional “Siglo XX” es una institución de educación superior de naturaleza obrera e intercultural, científica y revolucionaria de excelencia académica; con profesionales orgánicos constructores de un nuevo orden político, ideológico, económico, social y cultural en el Estado Plurinacional de Bolivia.</div>
     </div>
       {% endif %}
-        <div class="border-success border-top border-end border-start">
-          <br>
-          <div class="respuesta" id='respuesta' style='background-color:rgba(255,255,255,0.4)'>
+        <div class="border-secondary border-top border-end border-start">
+          
+          <div class="respuesta p" id='respuesta' style='background-color:rgba(255, 255, 255, 0.6)'>
 
           </div>
           <p></p>
