--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,7 @@
           setTimeout(function() {
                 // Ocultar la animación de carga
                 document.getElementById('loader').style.display = 'none';
-                $('#respuesta').html("<div class ='alert alert-danger'>Ocurrio un error al buscar la información, el error puede ocurrir por falta de datos, le pido que registre mas informacion</div>");
+                $('#respuesta').html("<div class ='alert alert-danger'>Ocurrio un error al buscar la información, el error puede ocurrir por falta de datos, errores internos, etc. le pido que registre mas informacion, o comuniquese con el administrador</div>");
                 var select = document.getElementById('posible_respuesta');
                 select.selectedIndex = 0;
                 document.getElementById('buscar').disabled = false;
