--- a/templates/menu.html
+++ b/templates/menu.html
@@ -31,11 +31,21 @@
 
               </ul>
               </li>
-
-              <li class='nav-item' title='backup de la base de datos'>
-                <a class='nav-link btn btn-outline-secondary text-primary' href='/backup'>Backup</a>
+              <li class='nav-item dropdown' title='Registros'>
+                <a class='nav-link dropdown-toggle btn btn-outline-secondary text-primary' href='#' id='navbarDropdown2' role='button' data-bs-toggle='dropdown' aria-expanded='false'>
+                  Base de datos <!-- Mostrar nombre de usuario -->
+                </a>
+                <ul class='dropdown-menu' aria-labelledby='navbarDropdown2'>
+                  <li><hr class='dropdown-divider'></li>
+                    <li class='nav-item' title='exportar base de datos'>
+                      <a class='nav-link btn btn-outline-info text-primary' href='/backup'>Exportar</a>
+                    </li>
+                    <li class='nav-item' title='Importar base de datos'>
+                      <a class='nav-link btn btn-outline-info text-primary' href='/Importar'>Importar</a>
+                    </li>
+                  </li>
+                </ul>
               </li>
-
               <li class='nav-item dropdown' title='Registros'>
                 <a class='nav-link dropdown-toggle btn btn-outline-secondary text-primary' href='#' id='navbarDropdown2' role='button' data-bs-toggle='dropdown' aria-expanded='false'>
                   Registros <!-- Mostrar nombre de usuario -->
