--- a/templates/menu.html
+++ b/templates/menu.html
@@ -40,9 +40,9 @@
                     <li class='nav-item' title='exportar base de datos'>
                       <a class='nav-link btn btn-outline-info text-primary' href='/backup'>Exportar</a>
                     </li>
-                    <li class='nav-item' title='Importar base de datos'>
+                    <!--<li class='nav-item' title='Importar base de datos'>
                       <a class='nav-link btn btn-outline-info text-primary' href='/Importar'>Importar</a>
-                    </li>
+                    </li>-->
                   </li>
                 </ul>
               </li>
